# lbm-blood-1d

./: .gitignore  :w  Cargo.toml  LICENSE.txt  README.md  analyse.py  plot.py  vid.py
benches/: main.rs
docs/: search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  (+4 more)
docs/implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
docs/lbm_blood_1d/: all.html  index.html  sidebar-items.js
docs/lbm_blood_1d/logging/: fn.tracing_init.html  index.html  sidebar-items.js  struct.TimeLog.html
docs/lbm_blood_1d/settings/: index.html  sidebar-items.js  struct.Settings.html
docs/lbm_blood_1d/simulation/: index.html  sidebar-items.js  struct.Simulation.html  type.InletRaw.html
docs/lbm_blood_1d/vessels/: enum.Outflow.html  enum.OutflowEnum.html  enum.OutflowUnion.html  index.html  sidebar-items.js  struct.OutflowClass.html  struct.Simulation.html  struct.Vessel.html  struct.Wk3.html
docs/src/lbm_blood_1d/: lib.rs.html  logging.rs.html  settings.rs.html  simulation.rs.html  vessels.rs.html
src/: boundary_conditions.rs  constants.rs  lbm_algorithm.rs  lib.rs  logging.rs  main.rs  settings.rs  simulation.rs  simulation_parsing.rs  utils.rs  vessels.rs  vessels_cells.rs  vessels_parsing.rs
tests/: example.rs
vascularNetworks/: adan56.json  bifur.json  single_artery.json  two_arteries.json
(+5 files in other folders)
